--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-6">Menu</div>
+                <div class="col-6">
+                    <nav class="menu">
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Product</a></li>
+                        <li><a href="">Payment</a></li>
+                        <li><a href="">Shipping</a></li>
+                    </nav>
+                </div>
                 <div class="col-3">Search</div>
             </div>
         </div>
