--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="col-6">
                     <nav class="menu">
-                        <li><a href="">Home</a></li>
+                        <li><a href="">Home1</a></li>
                         <li><a href="">Product</a></li>
                         <li><a href="">Payment</a></li>
                         <li><a href="">Shipping</a></li>
