--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="col-6">
                     <nav class="menu">
                         <li><a href="">Home1</a></li>
-                        <li><a href="">Product</a></li>
+                        <li><a href="">Product2</a></li>
                         <li><a href="">Payment</a></li>
                         <li><a href="">Shipping</a></li>
                     </nav>
